--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -58,8 +58,9 @@
                 <h6><i class="fas fa-comments"></i> Room Name:</h6>
                 <div id="listRoom">
                   <% listRoom.forEach((e)=> {%>
+                  <% if (e.type !== 'user') { %>
                   <li class="clearfix" onclick="clickRoom('<%=e._id%>')">
-                    <img src="/img/avatar1.png" alt="avatar" />
+                    <img src="<%=e.roomImage%>" alt="avatar" />
                     <div class="about">
                       <div class="name roomname <%=e._id%>"><%= e.name %></div>
                       <div class="status">
@@ -67,7 +68,7 @@
                       </div>
                     </div>
                   </li>
-
+                  <%}%>
                   <% })%>
                   <!-- <li class="clearfix active">
                             <img src="/img/avatar2.png" alt="avatar">
@@ -79,11 +80,11 @@
                 </div>
 
                 <!-- Chưa cập nhật chức năng chat cá nhân -->
-                <!-- <h6 style="padding-top: 1em">
+                <h6 style="padding-top: 1em">
                   <i class="fas fa-users"></i> Users:
-                </h6> -->
-                <!-- <div id="listUser">
-                  <li class="clearfix">
+                </h6> 
+                <div id="listUser">
+                  <!-- <li class="clearfix">
                     <img src="/img/avatar3.png" alt="avatar" />
                     <div class="about">
                       <div class="name">Mike Thomas</div>
@@ -119,8 +120,8 @@
                         28
                       </div>
                     </div>
-                  </li>
-                </div> -->
+                  </li> -->
+                </div> 
               </ul>
             </div>
             <div class="chat">
@@ -132,54 +133,30 @@
                       data-toggle="modal"
                       data-target="#view_info"
                     >
-                      <img src="/img/avatar1.png" alt="avatar" />
+                      <img
+                        src="<%=user.avatar%>"
+                        class="avatar"
+                        id="roomImage"
+                        alt="avatar"
+                      />
                     </a>
                     <div class="chat-about">
                       <h6 class="m-b-0" id="currentName"></h6>
-                      <small id="currentTime">Last seen: 2 hours ago</small>
+                      <small id="currentTime"></small>
                     </div>
                   </div>
                   <div class="col-lg-6 hidden-sm text-right">
                     <!-- <a href="javascript:void(0);" class="btn btn-outline-secondary"><i class="fa fa-camera"></i></a>
                             <a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-image"></i></a>
                             <a href="javascript:void(0);" class="btn btn-outline-info"><i class="fa fa-cogs"></i></a> -->
-                    <a
-                      href="/logout"
-                      class="btn btn-outline-warning btn-logout"
+                    <a href="/logout" class="btn btn-outline-warning btn-logout"
                       >Logout <i class="fas fa-sign-out-alt"></i
                     ></a>
                   </div>
                 </div>
               </div>
               <div class="chat-history">
-                <ul class="m-b-0" id="list-chat">
-                  <!-- <li class="clearfix">
-                    <div class="message-data text-right">
-                      <span class="message-data-time">10:10 AM, Today</span>
-                      <img src="/img/avatar3.png" alt="avatar" />
-                    </div>
-                    <div class="message other-message float-right">
-                      Hi Aiden, how are you? How is the project coming along?
-                    </div>
-                  </li>
-                  <li class="clearfix">
-                    <div class="message-data">
-                      <img src="/img/avatar3.png" alt="avatar" />
-                      <span class="message-data-time">10:12 AM, Today</span>
-                    </div>
-                    <div class="message my-message">Are we meeting today?</div>
-                  </li>
-                  <li class="clearfix">
-                    <div class="message-data">
-                      <img src="/img/avatar3.png" alt="avatar" />
-                      <span class="message-data-time">10:15 AM, Today</span>
-                    </div>
-                    <div class="message my-message">
-                      Project has been already finished and I have results to
-                      show you.
-                    </div>
-                  </li> -->
-                </ul>
+                <ul class="m-b-0" id="list-chat"></ul>
               </div>
               <div class="chat-message clearfix">
                 <div class="input-group mb-0">
@@ -188,8 +165,24 @@
                     class="form-control txt-chat"
                     placeholder="Enter text here..."
                   />
+                  <div class="input-group-prepend btn-send-img">
+                    <span class="input-group-text">
+                      <label for="chatImage" class="chatImg"
+                        ><i class="fas fa-images" style="cursor: pointer"></i
+                      ></label>
+                      <form enctype="multipart/form-data" id="chatimgform">
+                        <input
+                          type="file"
+                          name="chatImage"
+                          id="chatImage"
+                          accept="image/png, image/jpeg, image/jpg"
+                          style="display: none; visibility: hidden"
+                        />
+                      </form>
+                    </span>
+                  </div>
                   <div class="input-group-prepend btn-send">
-                    <span class="input-group-text "
+                    <span class="input-group-text"
                       ><i class="far fa-paper-plane"></i
                     ></span>
                   </div>
@@ -203,10 +196,16 @@
     <div id="notify"></div>
   </body>
   <script type="module">
-    import { clickRoom1 } from "/js/handle.js";
+    import { clickRoom1, redirectTo1, clickUser1 } from "/js/handle.js";
     window.clickRoom = function clickRoom(id) {
       // alert("H1")
       clickRoom1(id);
+    };
+    window.redirectTo = function redirectTo(url) {
+      redirectTo1(url)
+    }
+    window.clickUser = function clickUser(id) {
+      clickUser1(id)
     }
   </script>
 </html>
