--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Register</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/login.css">
@@ -21,21 +22,28 @@
             <p><%= messages.error %> </p>
           <% } %>
           <!-- Makes POST request to /register route -->
-          <form action="/register" method="POST">
+          <form action="/register" method="POST" enctype="multipart/form-data">
             <div class="form-group">
-              <label for="id">Username</label>
+              <label for="id">Username <span style="color: red">*</span></label>
               <input type="text" class="form-control" name="username">
             </div>
             <div class="form-group">
-              <label for="password">Password</label>
+              <label for="password">Password <span style="color: red">*</span></label>
               <input type="password" class="form-control" name="password">
             </div>
             <div class="form-group">
-              <label for="name">Name</label>
+              <label for="name">Name <span style="color: red">*</span></label>
               <input type="text" class="form-control" name="name">
             </div>
+            <div class="form-group">
+              <label for="avatar">Avatar</label>
+              <input type="file" class="form-control" id="input-files" name="avatar">
+            </div>
+          <div class="form-group preview-images"></div>
+
             <button type="submit" class="btn btn-dark">Register</button>
           </form>
+
           <a href="/"><button style="margin-top: 10px;" class="btn btn-secondary">Login</button></a>
 
         </div>
@@ -57,6 +65,27 @@
 </div>
 
 
-
+<script>
+  $(document).ready(function() {
+    let imagesPreview = function(input, placeToInsertImagePreview) {
+      if (input.files) {
+        let filesAmount = input.files.length;
+        for (i = 0; i < filesAmount; i++) {
+          let reader = new FileReader();
+          reader.onload = function(event) {
+            $($.parseHTML("<img>"))
+              .attr("src", event.target.result)
+              .attr("style", 'width: 300px')
+              .appendTo(placeToInsertImagePreview);
+          };
+          reader.readAsDataURL(input.files[i]);
+        }
+      }
+    };
+    $("#input-files").on("change", function() {
+      imagesPreview(this, "div.preview-images");
+    });
+  });
+</script>
 </body>
 </html>
