--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -164,9 +164,14 @@
                 <ul class="m-b-0" id="list-chat"></ul>
               </div>
               <div class="chat-message clearfix">
+                
                 <div class="input-group row input-send">
+                  <div class="input-group-prepend user-writing">
+                    
+                  </div>
+
                   <!-- cần tối ưu lại kích thước các cột -->
-                  <div style="width: 85%;" class="input-group-prepend">
+                  <div style="width: 85%;" class="input-group-prepend input-chat">
                     <input
                     type="text"
                     class="form-control txt-chat"
