--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -41,10 +41,18 @@
       rel="stylesheet"
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.1/emojionearea.min.js"></script>
-  </head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
+    
+</head>
   <body>
     <div class="container">
-      <h2>Hello, <%=user.username%></h2>
+      <div class="nav">
+        <h2 style="display: inline;">Hello, <%=user.username%></h2>
+      <a href="/logout" style="position: absolute; right: 200px;; " class="text-right btn btn-outline-warning btn-logout"
+                      >Logout <i class="fas fa-sign-out-alt"></i
+                    ></a>
+      </div>
+      
       <div class="row clearfix">
         <div class="col-lg-12">
           <div class="card chat-app">
@@ -154,9 +162,8 @@
                     <!-- <a href="javascript:void(0);" class="btn btn-outline-secondary"><i class="fa fa-camera"></i></a>
                             <a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-image"></i></a>
                             <a href="javascript:void(0);" class="btn btn-outline-info"><i class="fa fa-cogs"></i></a> -->
-                    <a href="/logout" class="btn btn-outline-warning btn-logout"
-                      >Logout <i class="fas fa-sign-out-alt"></i
-                    ></a>
+                    <a href="/call" target="_blank" class="btn btn-outline-success btn-video-call"
+                      ><i class="fas fa-video"></i> Video Call</a>
                   </div>
                 </div>
               </div>
