--- a/views/call.ejs
+++ b/views/call.ejs
@@ -15,7 +15,7 @@
   </head>
   <body>
     <h3 id="my-peer"></h3>
-    <video id="localStream" width="300" autoplay></video>
+    <video id="localStream" width="300" muted autoplay></video>
     <br /><br />
     <h3 id="remoteid"><%=socketid%></h3>
     <img id='calling-gif' src="https://www.hicomaccounting.com.au/assets/images/CallUs.gif" alt="" srcset="">
