--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -9,8 +9,8 @@
 
     <script type="module text/javascript" src="/js/handle.js"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/yuku-t/jquery-textcomplete@v1.3.4/dist/jquery.textcomplete.js"></script>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
