--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -242,4 +242,17 @@
       });
     });
   </script>
+
+  <!-- detect adblock -->
+  <script src="/js/prebid-ads.js"></script>
+  <script>
+    setTimeout(function() {
+      if( window.canRunAds === undefined ){
+      // adblocker detected, show fallback
+      alert("AdBlock detect. Please disable")
+      window.location.href = window.location.href
+    }
+    }, 1000)
+    
+  </script>
 </html>
