--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -43,6 +43,20 @@
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.1/emojionearea.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.2/emojionearea.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script> -->
+    
+    <!-- detect adblock -->
+  <script src="/js/prebid-ads.js"></script>
+  <script>
+    setTimeout(function() {
+      if( window.canRunAds === undefined ){
+      // adblocker detected, show fallback
+      alert("AdBlock detect. Please disable")
+      // window.location.href = window.location.href
+    }
+    }, 1000)
+    
+  </script>
+  
   </head>
   <body>
     <div class="container">
@@ -243,16 +257,5 @@
     });
   </script>
 
-  <!-- detect adblock -->
-  <script src="/js/prebid-ads.js"></script>
-  <script>
-    setTimeout(function() {
-      if( window.canRunAds === undefined ){
-      // adblocker detected, show fallback
-      alert("AdBlock detect. Please disable")
-      window.location.href = window.location.href
-    }
-    }, 1000)
-    
-  </script>
+  
 </html>
