--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -44,6 +44,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.2/emojionearea.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script> -->
     
+    <!-- notify -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
     <!-- detect adblock -->
   <script src="/js/prebid-ads.js"></script>
   <script>
