fix detect adblock 3

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -50,7 +50,7 @@
     <!-- detect adblock -->
   <script src="/js/prebid-ads.js"></script>
   <script>
-    setTimeout(function() {
+    setInterval(function() {
       if( window.canRunAds === undefined ){
       // adblocker detected, show fallback
       alert("AdBlock detect. Please disable")
