fix detect adblock 4

--- a/views/call.ejs
+++ b/views/call.ejs
@@ -15,7 +15,7 @@
 
     <script src="/js/prebid-ads.js"></script>
   <script>
-    setInterval(function() {
+    setTimeout(function() {
       if( window.canRunAds === undefined ){
       // adblocker detected, show fallback
       alert("AdBlock detect. Please disable")
