Update local lib

--- a/views/call.ejs
+++ b/views/call.ejs
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <title>Calling...</title>
-    <!-- <script src="jquery.js"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
-    <!-- <script src="peer.js"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.2/peerjs.min.js"></script>
+    <script src="/js/jquery.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script> -->
+    <script src="/js/peer.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.2/peerjs.min.js"></script> -->
     <!-- <script src="socket.io.js"></script> -->
     <script
       src="https://cdn.socket.io/3.1.3/socket.io.min.js"
