Add audio incoming call. Add funtion end call

--- a/views/call.ejs
+++ b/views/call.ejs
@@ -13,6 +13,8 @@
       crossorigin="anonymous"
     ></script>
 
+    <script src="/js/sweetalert.js"></script>
+
     <script src="/js/prebid-ads.js"></script>
   <script>
     setTimeout(function() {
