--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -45,7 +45,8 @@
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script> -->
     
     <!-- notify -->
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <!-- <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> -->
+    <script src="/js/sweetalert.js"></script>
 
     <!-- detect adblock -->
   <script src="/js/prebid-ads.js"></script>
